[package]
name = "beap"
version = "0.1.0"
authors = ["starovoid"]
license = "MIT"
edition = "2021"
readme = "README.md"
description = "Bi-parental heap data structure implementation in Rust"
homepage = "https://github.com/starovoid/beap"
repository = "https://github.com/starovoid/beap"
keywords = ["heap", "beap", "sorting"]
categories = ["data structures"]

[lib]
name = "beap"

[dependencies]

[dev-dependencies]
rand = "0.8.5"
