[package]
name = "beap"
version = "0.1.2"
authors = ["starovoid"]
license = "MIT"
edition = "2021"
readme = "README.md"
description = "Bi-parental heap data structure implementation in Rust"
homepage = "https://github.com/starovoid/beap"
repository = "https://github.com/starovoid/beap"
keywords = ["heap", "beap", "sorting"]
categories = ["data-structures"]

[lib]
name = "beap"

[dependencies]
criterion = "0.5.1"

[dev-dependencies]
rand = {version = "0.8", features = ["small_rng"]}

[[bench]]
name = "benches"
harness = false
