[package]
name = "beap"
version = "0.1.2"
authors = ["starovoid"]
license = "MIT"
edition = "2021"
readme = "README.md"
description = "Bi-parental heap data structure implementation in Rust"
homepage = "https://github.com/starovoid/beap"
repository = "https://github.com/starovoid/beap"
keywords = ["heap", "beap", "sorting"]
categories = ["data-structures"]

[lib]
name = "beap"

[features]
serde = ["dep:serde"]

[dependencies]
serde = {version = "1", optional = true}

[dev-dependencies]
rand = {version = "0.8", features = ["small_rng"]}
criterion = "0.5"

[[bench]]
name = "benches"
harness = false
